<resources>
    <string name="app_name">PMDM3P</string>
    <string name="etNom">Nombre</string>
    <string name="VIP">VIP</string>
    <string name="tvVolver">Volver</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="tvVIP">"VIP: "</string>
    <string name="btnReco">Recomendado</string>
    <string name="btnAnimal">Animal favorito</string>
    <string name="btnVIP">VIP</string>
    <string name="btnVer">Ver</string>
    <string name="btnSalir">Salir</string>
    <string name="btnAlta">Alta</string>
    <string name="textNombre">\"Pedro\"</string>
    <string name="textEmail" translatable="false">info@android.es</string>
    <string name="textFecha" translatable="false">\"01/01/1970\"</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="stFecha">Fecha de nacimiento:</string>
    <string name="stEmail" translatable="false">Email:</string>
    <string name="stNombre">Nombre:</string>
    <string name="ckRecomendado">Recomendado</string>
    <string name="opPerros">Perros</string>
    <string name="opGatos">Gatos</string>
    <string name="stAnimal">¿Qué animal prefieres?</string>
    <string name="btnProgress">Cuenta atras</string>
    <string name="stReco">Recomendado:</string>
    <string name="stCuenta">Cuenta atras:</string>
    <string name="textAnimal" translatable="false">Animal:</string>
</resources>