<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnAlta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAlta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.224" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSalir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.795" />

        <Button
            android:id="@+id/btnVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnVer"
            app:layout_constraintBottom_toTopOf="@+id/btnSalir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSpinner" />

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReco"
            app:layout_constraintBottom_toTopOf="@+id/btnSpinner"
            app:layout_constraintEnd_toStartOf="@+id/btnRadio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAlta" />

        <Button
            android:id="@+id/btnRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAnimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.887"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374" />

        <Button
            android:id="@+id/btnSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/btnVIP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.524" />

        <Button
            android:id="@+id/btnProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnProgress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.73"
            app:layout_constraintStart_toEndOf="@+id/btnSpinner"
            app:layout_constraintTop_toBottomOf="@+id/btnRadio"
            app:layout_constraintVertical_bias="0.152" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>