<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltasActivity">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="93dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/stNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="82dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/stEmail"
        app:layout_constraintBottom_toTopOf="@+id/tvFecha"
        app:layout_constraintEnd_toStartOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="128dp"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/stFecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etFecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        app:layout_constraintVertical_bias="0.428" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="251dp"
        android:layout_height="102dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/textEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="254dp"
        android:layout_height="79dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textNombre"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="244dp"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/textFecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="484dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="532dp" />
</androidx.constraintlayout.widget.ConstraintLayout>