<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioActivity">

    <Button
        android:id="@+id/btnVolverR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvVolver"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="533dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="581dp" />

    <Button
        android:id="@+id/btnAceptarR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/btnVolverR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="185dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline22">

        <TextView
            android:id="@+id/tvTexto"
            android:layout_width="212dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/stAnimal" />

        <RadioButton
            android:id="@+id/rbPerros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opPerros" />

        <RadioButton
            android:id="@+id/rbGatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opGatos" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>